# compositional-directions-cf35-gemini

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
code/mlsae/: .gitignore  README.md  citation.bib  figures.py  layer_dists.py  layer_tests.py  pyproject.toml  requirements.txt  tests.py  upload.py
code/mlsae/figures/: embed_sim.py  entropy.py  heatmap.py  heatmap_aggregate.py  heatmap_prompt.py  layer_hist.py  layer_sim.py  layer_std.py  mmcs.py  num_layers.py  resid_sim.py  scatter_freq.py  test.py  wdec_sim.py
code/mlsae/mlsae/: model_card.py  utils.py
code/mlsae/mlsae/analysis/: dists.py  examples.py  variances.py
code/mlsae/mlsae/metrics/: dead_latents.py  layerwise.py
code/mlsae/mlsae/metrics/tests/: test_layerwise_fvu.py  test_layerwise_l0_norm.py  test_layerwise_l1_norm.py  test_layerwise_mse.py  test_loss_mse.py
code/mlsae/mlsae/model/: __init__.py  lightning.py
code/mlsae/mlsae/model/autoencoders/: __init__.py  standard.py  topk.py  utils.py
code/mlsae/mlsae/model/autoencoders/tests/: test_autoencoders.py
code/mlsae/mlsae/model/transformers/: __init__.py  gemma2.py  gpt2.py  llama.py  pythia.py
code/mlsae/mlsae/model/transformers/models/gemma2/: modeling_gemma2.py
code/mlsae/mlsae/model/transformers/models/gpt2/: modeling_gpt2.py
code/mlsae/mlsae/model/transformers/models/llama/: modeling_llama.py
code/mlsae/mlsae/model/transformers/tests/: test_gpt2.py  test_llama.py
code/mlsae/mlsae/trainer/: config.py  test.py  train.py
datasets/: .gitignore  README.md
logs/: execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
(+42 files in other folders)
